<resources>
    <string name="app_name">app</string>
    <string name="input_activity_text">New car data</string>
    <string name="text_insert">Please insert text here</string>
    <string name="press_text_send">Press</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Сancel</string>
    <string name="toolbar_title_main_activity">Main activity</string>
    <string name="toolbar_title_second_activity">Second Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textOne">One</string>
    <string name="textTwo">Two</string>
    <string name="send_btn">Send</string>
    <string name="car_name">Car name</string>
    <string name="car_color">Car color</string>
    <string name="car_max_speed">Car max speed</string>
    <string name="car_capacity">Car capacity</string>
    <string name="illegal_argument">Illegal Argument</string>
    <string name="no_value_provided">No value provided</string>
    <string name="input_number">Please input number</string>
    <string name="open_book">Open book</string>
</resources>