<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".InputActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_input_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/input_activity_text"
        android:textSize="@dimen/title_text_size" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/car_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:maxLines="1"
        android:hint="@string/car_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/car_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:maxLines="1"
        android:hint="@string/car_color" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/car_m_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/car_max_speed"
        android:maxLines="1"
        android:inputType="number"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/car_capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/car_capacity"
        android:maxLines="1"
        android:inputType="number"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/AppButton"
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_btn" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/AppButton"
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button" />


</LinearLayout>